TS fixes in Fediseer lib. Make nProgress bar more visible and blue

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -47,8 +47,10 @@ body {
 }
 
 #nprogress .bar {
-  @apply bg-black dark:bg-white !important;
+  /*@apply bg-black dark:bg-white !important;*/
+  @apply bg-sky-700 !important;
   z-index: 999 !important;
+  height: 4px !important;
 }
 
 #nprogress .peg {
